<?xml version="1.0"?>
<package>
  <name>perlin_noise_filter</name>
  <version>0.0.1</version>
  <description>This is a ROS filter that takes vector of x,y,z values as input
  and updates given output vector with the result of the Perlin Noise function.</description>

  <maintainer email="jdexheimer@wisc.edu">Jake Dexheimer</maintainer>
  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/perlin_noise_filter</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="jdexheimer@wisc.edu">Jake Dexheimer</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>filters</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>filters</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <filters plugin="${prefix}/plugin_description_file.xml" />
  </export>
</package>
