<?xml version="1.0"?>
<package>
  <name>perlin_noise_filter</name>
  <version>0.0.1</version>
  <description>A ROS filter that takes a vector of x,y,z values as input
  and updates given output vector with the result of the Perlin Noise function.</description>

  <maintainer email="hci@wisc.edu">University of Wisconsin - Madison HCI lab</maintainer>
  <license>BSD</license>
  <author email="jdexheimer@wisc.edu">Jake Dexheimer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>filters</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>filters</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <filters plugin="${prefix}/plugin_description_file.xml" />
  </export>
</package>
